syntax = "proto3";
package stride.icaoracle;

option go_package = "github.com/Stride-Labs/stride/v5/x/icaoracle/types";

message Oracle {
  string chain_id = 1;
  string connection_id = 2;
  string channel_id = 3;
  string port_id = 4;
  string ica_address = 5;
  string contract_address = 6;
  bool active = 7;
  bool flush_pending_metrics = 8;
}

message Metric {
  string key = 1;
  string value = 2;
  string metric_type = 3;
  uint64 update_time = 4;
  Metadata metadata = 5;
}

message Metadata {
  int64 block_height = 1;
  string attributes = 2;
}

message RedemptionRateAttributes {
  string denom = 1;
  string base_denom = 2;
}

message PendingMetricUpdate {
  Metric metric = 1;
  string oracle_chain_id = 2;
}
